--- a/cpp/catch2/CMakeLists.txt
+++ b/cpp/catch2/CMakeLists.txt
@@ -10,7 +10,7 @@ ExternalProject_Add(
         PREFIX ${CMAKE_BINARY_DIR}/catch2
         GIT_REPOSITORY https://github.com/catchorg/Catch2.git
         TIMEOUT 10
-        UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+        GIT_TAG v2.13.10
         CONFIGURE_COMMAND ""
         BUILD_COMMAND ""
         INSTALL_COMMAND ""
@@ -18,7 +18,7 @@ ExternalProject_Add(
 )
 
 ExternalProject_Get_Property(catch source_dir)
-include_directories(${source_dir}/single_include/catch2)
+include_directories(${source_dir}/single_include/)
 
 add_executable(
         ${PROJECT_NAME}
